syntax = "proto3";

package apps.v1;

import "tagger/tagger.proto";
import "validate/validate.proto";

enum Status {
  STATUS_UNSPECIFIED = 0;
  STATUS_ACTIVE = 1;
  STATUS_PROVISIONING = 2;
  STATUS_UNKNOWN = 3;
  STATUS_ERROR = 4;
}

// GetStatusResponse returns a broken down status of each component in the org
message GetStatusResponse {
  Status status = 1;
  string message = 2;
}

message GetStatusRequest {
  string org_id = 1 [
    (validate.rules).string.len = 26,
    (tagger.tags) = "faker:\"shortID\""
  ];

  string app_id = 2 [
    (validate.rules).string.len = 26,
    (tagger.tags) = "faker:\"shortID\""
  ];
}
